--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
   <div class="hero">
     <h1>RoboExecutor</h1>
     <p>The fastest and easiest Roblox executor ever made.</p>
-    <a href="https://app.mediafire.com/folder/u1u1h654igqwp/RoboExecutor" target="_blank" class="btn">Download Now</a>
+    <a href="https://www.mediafire.com/folder/73rh953p5kqbu/RoboExecutor" target="_blank" class="btn">Download Now</a>
   </div>
 
   <section class="features">
